kubernetes/environments/staging/ingress-stuff.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # want staging.sunba.dev to be available to public for user tests
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.websecure.protocol: websocket
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik-sunbadev-staging
  tls:
  - hosts:
    - staging.sunba.dev
    secretName: sunba-staging-tls
  rules:
  - host: staging.sunba.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-sunbadev-staging
spec:
  controller: traefik.io/ingress-controller
